# NewYearGarlands

./: CMakeLists.txt  NewYearGarlands.sln  README.md
client/: GarlandLampApp.cpp  GarlandLampApp.h  GarlandLampFrame.cpp  GarlandLampFrame.h  GarlandMessageEvent.cpp  GarlandMessageEvent.h  LampCloseEvent.cpp  LampCloseEvent.h  Main.cpp  client.vcxproj  client.vcxproj.filters
common/: ClientGarlandPipe.cpp  ClientGarlandPipe.h  GarlandMessage.h  GarlandPipe.cpp  GarlandPipe.h  ServerGarlandPipe.cpp  ServerGarlandPipe.h  common.vcxproj  common.vcxproj.filters
service/: ErrorMessage.h  ErrorMessage.mc  GarlandServer.cpp  GarlandServer.h  GarlandServerThreadArgument.cpp  GarlandServerThreadArgument.h  GarlandService.cpp  GarlandService.h  Main.cpp  MessageGeneratorProvider.cpp  MessageGeneratorProvider.h  service.vcxproj  service.vcxproj.filters
